--- a/app/styles/Dialog.module.scss
+++ b/app/styles/Dialog.module.scss
@@ -1,7 +1,7 @@
 @import './colors';
 @import './transitions';
 
-.dialog-header {
+.dialog-header, .dialog-header-max {
   position: relative;
   z-index: 2;
   display: flex;
@@ -22,6 +22,11 @@
   }
 }
 
+.dialog-header-max {
+  margin: 0;
+  padding: 1rem;
+}
+
 .dialog-main-max-height {
   position: absolute;
   z-index: 1;
@@ -33,12 +38,21 @@
   overflow: auto;
 }
 
-.dialog-footer, .dialog-footer-max-height {
+.dialog-main-max {
+  overflow-y: auto;
+}
+
+.dialog-footer, .dialog-footer-max, .dialog-footer-max-height {
   display: flex;
   justify-content: space-between;
   margin: 1rem -1rem 0 -1rem;
   padding: 1rem 1rem 0 1rem;
   border-top: 1px solid $gray-light;
+}
+
+.dialog-footer-max {
+  margin: 0;
+  padding: 1rem;
 }
 
 .dialog-footer-max-height {
