--- a/app/styles/Modal.module.scss
+++ b/app/styles/Modal.module.scss
@@ -46,6 +46,11 @@
   padding: 1rem;
 }
 
+.modal-content-max {
+  display: grid;
+  height: 100%;
+}
+
 @keyframes fade-in {
   from { opacity: 0; }
   to { opacity: 1; }
