--- a/app/styles/TilesetFinder.module.scss
+++ b/app/styles/TilesetFinder.module.scss
@@ -26,7 +26,7 @@
 }
 
 .tileset-finder-checkbox-tree {
-  max-height: 50vh;
+  max-height: 20rem;
   overflow-y: scroll;
   padding: 0.25rem;
   border: 1px solid $gray-light;
